--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "html-webpack-plugin": "^3.2.0",
     "json5": "^2.1.3",
     "mock.js": "^0.2.0",
+    "mockjs": "^1.1.0",
     "webpack-cli": "^4.2.0"
   },
   "devDependencies": {
